# dowser

./: .env.template  .gitignore  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
experiments/: Dockerfile  README.md  capture_memory_output  run.py  run.sh
experiments/.bak/001-hilbert-transform/: run.sh
experiments/.bak/002-memory-usage-correctness/: README.md  run.sh
experiments/.bak/003-memory-pressure/: .python-version  Dockerfile  README.md  run.sh
experiments/.bak/005-envelope-memory-pressure/: Dockerfile
experiments/.bak/006-profile-memory-pattern/: Dockerfile  run.sh
experiments/001-hilbert-transform/: .python-version  Dockerfile  README.md  requirements.txt  run.sh
experiments/001-hilbert-transform/src/: evaluate.py
experiments/001-smaps-progression/: README.md  evaluate.py  experiment.py  run.sh
experiments/002-memory-usage-correctness/: .python-version  Dockerfile  requirements.txt  run.sh
experiments/002-memory-usage-profile/: evaluate.py  experiment.py  run.sh
experiments/003-memory-pressure/: requirements.txt  run.sh
experiments/003-memory-pressure-profile/: evaluate.py  run.sh
experiments/004-envelope/: Dockerfile  README.md  requirements.txt  run.sh
experiments/004-envelope/src/: envelope.py  (+1 more)
experiments/004-synthetic-data-validation/: run.sh
experiments/005-envelope-memory-pressure/: README.md  run.sh
experiments/006-profile-memory-pattern/: README.md  run.sh
experiments/common/: cluster.py  data.py  report.py
libs/logging/: constants.py  formatter.py  history.py  logger.py
(+78 files in other folders)
