[tool.poetry]
name = "dowser"
version = "0.1.0"
description = "Automated chunk-size tuning for big data"
authors = ["delucca <gpg@delucca.dev>"]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "~3.11"
dask = {version = "^2023.4.1", optional = true }
numpy = {version = "^1.24.3", optional = true }
scipy = {version = "^1.10.1", optional = true }
memory-profiler = {version = "^0.61.0", optional = true }
ulid = {version = "^1.1", optional = true}
pandas = {version = "^2.0.2", optional = true}
matplotlib = {version = "^3.7.1", optional = true}

[tool.poetry.extras]
experiments = ["dask", "numpy", "scipy", "memory-profiler", "ulid", "pandas", "matplotlib"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
experiment = "experiments.main:start_experiment"
